--- a/kontakt.html
+++ b/kontakt.html
@@ -15,7 +15,7 @@
  <header> 
      
     <div class="logo"> 
-       <img alt="Nails Gallery" title="logo" src="nails.logo.png" height="100" width="250">
+       <img alt="Nails Gallery" title="nail logo" src="nails.logo.png" height="100" width="250">
     </div>
        <nav>
     <ul class="nav"> 
