--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </div>
 <nav>
     <ul class="nav"> 
-            <li><a href="index.html" title="knappen hjelm">HOME</a></li> 
-            <li><a href="services.html" title="hvilke services tilbydes">SERVICES</a></li>
-            <li><a href="onlinebooking.html" title="book en professionel neglebehandler">ONLINE BOOKING</a></li>
-            <li><a href="kontakt.html" title="Se hvordan du kommer i dialog med vores personale og hvor du finder klinikken">KONTAKT</a></li>
+            <li><a href="index.html" title="Hjem">HOME</a></li> 
+            <li><a href="services.html" title="Hvilke services tilbydes">SERVICES</a></li>
+            <li><a href="onlinebooking.html" title="Book en professionel neglebehandler">ONLINE BOOKING</a></li>
+            <li><a href="kontakt.html" title="Se hvordan du kommer i dialog med vores personale og hvor du finder klinikken">CONTACT</a></li>
           
     </ul>
 </nav>     
