--- a/kontakt.html
+++ b/kontakt.html
@@ -28,5 +28,33 @@
 </nav>
     
 </header>
+	
+	<div class="contact-form"> <!-- KN -->
+	<h1>Contact Us</h1> <!-- KN -->
+	<h4>- We will gladly help you</h4> <!-- KN -->
+		<div class="txtb"> <!-- KN -->
+			<label for="Name">Name:</label> <!-- KN -->
+			<input type="text" placeholder="Enter Your Name"> <!-- KN -->
+			
+		</div>
+		
+		<div class="txtb"> <!-- KN -->
+			<label for="phonenumber">Phone Number:</label> <!-- KN -->
+			<input type="text" placeholder="Enter Your Phone Number"> <!-- KN -->
+			
+		</div>
+		<div class="txtb"> <!-- KN -->
+			<label for="Email">Email:</label> <!-- KN -->
+			<input type="text" placeholder="Enter Your Email"> <!-- KN -->
+			
+		</div>
+		<div class="txtb"> <!-- KN -->
+			<label for="Message">Message:</label> <!-- KN -->
+			<textarea name="" id="" cols="30" rows="10" placeholder="Write your message here"></textarea> <!-- KN -->
+			
+		</div>
+		<a class="btn">Send</a> <!-- KN -->
+	</div>
+	
 </body>
     </html>
