--- a/kontakt.html
+++ b/kontakt.html
@@ -56,5 +56,11 @@
 		<a class="btn">Send</a> <!-- KN -->
 	</div>
 	
+	<footer> 
+    <div class="footer">
+        <p>Copyright &copy;Nails Gallery, Odense DK</p>
+        </div>
+    </footer>
+	
 </body>
     </html>
