Tilføjet title til billeder
Jeg har tilføjet titles til de tilføjede billeder på forsiden.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="row">
           <div class="column">
           <div class="video">
-            <img src="thumbnail.jpg" alt="Video thumbnail" width=500px>
+            <img src="thumbnail.jpg" title="Et billede fra vores reklamevideo" alt="Video thumbnail" width=500px>
           </div>
           </div>
           <p class="text">
@@ -71,17 +71,17 @@
         <div class="row">
         <div class="column">
           <h3>Gelis (Gellak)</h3>
-          <img src="about-img-2.jpg" alt="Gelis/Gellak">
+          <img src="about-img-2.jpg" title= "Et billede af negle lakeret med Gellak" alt="Gelis/Gellak">
           <p>GelColor er en blanding af lak og gelé. Det er en kombination af den hurtige og nemme påføringsteknik fra lak og holdbarheden fra geléen.</p>
         </div>
         <div class="column">
           <h3>Gelénegle</h3>
-          <img src="about-img-1.jpg" alt="Gelenegle">
+          <img src="about-img-1.jpg" title="Et billede af Gelenegle" alt="Gelenegle">
           <p>Vores dygtige personale har stor erfaring inden for gelénegle, så du kan læne dig trygt tilbage i vores behagelige lænestole, mens vi tager os kærligt af dig.</p>
         </div>
         <div class="column">
           <h3>Pedicure & manicure</h3>
-          <img src="about-img-3.jpg" alt="Pedicure & Manicure">
+          <img src="about-img-3.jpg" title="Et billede af manicure og pedicure" alt="Pedicure & Manicure">
           <p>Giv dine hænder eller fødder skøn pleje med en manicure eller pedicure.</p>
         </div>
       </div>
