--- a/index.html
+++ b/index.html
@@ -45,45 +45,56 @@
           <div class="column">
           <div class="video">
             <img src="thumbnail.jpg" title="Et billede fra vores reklamevideo" alt="Video thumbnail" width=500px>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=IrGseT1HMzM&feature=youtu.be&fbclid=IwAR1JrsZMYnlcGdPISQYakwlHVD887dDXDvnUIyX2FEFweX0YEDF5-11Et6Q"target="_blank"><button class="button read">Se video</button></a>
           </div>
           </div>
           <p class="text">
-          Vi har 10 klinikker fordelt nationalt i hhv. København, Århus, Aalborg og Odense.
+          Vi har 10 klinikker fordelt nationalt i København, Århus, Aalborg og Odense.
           <br>
           <br>
-          Vi tilbyder pedicure, manicure og utallige muligheder indenfor både naturlige negle, gelénegle og shellac.
+          Vi tilbyder pedicure, manicure og utallige muligheder indenfor både
+          <br>
+          naturlige negle, gelénegle og shellac.
           <br>
           <br>
-          Vi har ikke bare fokus på at give dine negle en sand forkælelse, men også på følelsen af velvære i hele kroppen.
+          Vi har ikke bare fokus på at give dine negle en sand forkælelse,
+          <br>
+          men også på følelsen af velvære i hele kroppen.
         </div>
       </div>
 
-
-      <br>
-      <br>
-      <br>
-      <br>
-
         <div class="services">
           <h2>VORES MANGE SERVICES</h2>
-        </div>
+
 
         <div class="row">
         <div class="column">
           <h3>Gelis (Gellak)</h3>
           <img src="about-img-2.jpg" title= "Et billede af negle lakeret med Gellak" alt="Gelis/Gellak">
           <p>GelColor er en blanding af lak og gelé. Det er en kombination af den hurtige og nemme påføringsteknik fra lak og holdbarheden fra geléen.</p>
+          <br>
+          <br>
+          <a href="services.html"><button class="button read">Læs mere</button></a>
         </div>
         <div class="column">
           <h3>Gelénegle</h3>
           <img src="about-img-1.jpg" title="Et billede af Gelenegle" alt="Gelenegle">
           <p>Vores dygtige personale har stor erfaring inden for gelénegle, så du kan læne dig trygt tilbage i vores behagelige lænestole, mens vi tager os kærligt af dig.</p>
+          <br>
+          <a href="services.html"><button class="button read">Læs mere</button></a>
         </div>
         <div class="column">
           <h3>Pedicure & manicure</h3>
           <img src="about-img-3.jpg" title="Et billede af manicure og pedicure" alt="Pedicure & Manicure">
           <p>Giv dine hænder eller fødder skøn pleje med en manicure eller pedicure.</p>
+          <br>
+          <br>
+          <br>
+          <a href="services.html"><button class="button read">Læs mere</button></a>
         </div>
+      </div>
       </div>
 
 
