--- a/index.html
+++ b/index.html
@@ -102,7 +102,25 @@
     <!--footer-->
      <footer>
     <div class="footer">
+      <div class="logo-footer">
+        <img alt="Nails Gallery" title="logo" src="nails.logo.png" height="100" width="250">
+        <div class="find-us">
+          Find os
+          <br>
+          <br>
+          Rosengårdcentret
+          <br>
+          Ørbækvej 75
+          <br>
+          5220 Odense
+          <br>
+          Telefon: +45 65 92 66 66
+        </div>
         <p>Copyright &copy;Nails Gallery, Odense DK</p>
+
+      </div>
+
+
         </div>
     </footer>
 
