--- a/booking.html
+++ b/booking.html
@@ -1,10 +1,66 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="author" content="Nails Gallery Odense">
+    <meta name="description" content="Nails Gallery består af professionel neglebehandling der kan yde dig den bedste service, når det gælder pedicure og manicure behandlinger.">
 
-  </body>
+    <title> Nails Gallery - Pedicure og Manicure behandlinger</title>
+    <link rel="stylesheet" href="stylesheet.css">
+
+</head>
+
+<!--Header-->
+<body>
+ <header>
+    <div class="logo">
+       <img alt="Nails Gallery" title="logo" src="nails.logo.png" height="100" width="250">
+    </div>
+<nav>
+    <ul class="nav">
+            <li><a href="index.html" title="Hjem">HOME</a></li>
+            <li><a href="services.html" title="Hvilke services tilbydes">SERVICES</a></li>
+            <li><a href="onlinebooking.html" title="Book en professionel neglebehandler">ONLINE BOOKING</a></li>
+            <li><a href="kontakt.html" title="Se hvordan du kommer i dialog med vores personale og hvor du finder klinikken">CONTACT</a></li>
+
+    </ul>
+</nav>
+
+</header>
+<!--indholdet-->
+<h1>Book din tid her</h1>
+  
+
+  </div>
+
+
+
+
+
+<!--footer-->
+ <footer>
+<div class="footer">
+  <div class="logo-footer">
+    <img alt="Nails Gallery" title="logo" src="nails.logo.png" height="100" width="250">
+    <div class="find-us">
+      Find os
+      <br>
+      <br>
+      Rosengårdcentret
+      <br>
+      Ørbækvej 75
+      <br>
+      5220 Odense
+      <br>
+      Telefon: +45 65 92 66 66
+    </div>
+    <p>Copyright &copy;Nails Gallery, Odense DK</p>
+
+  </div>
+
+
+    </div>
+</footer>
+
+</body>
 </html>
