Lavet booking form

--- a/booking.html
+++ b/booking.html
@@ -28,10 +28,114 @@
 
 </header>
 <!--indholdet-->
-<h1>Book din tid her</h1>
-  
+<h2>Book din tid her</h2>
 
-  </div>
+<div class="container">
+  <form action="/action_page.php">
+    <label for="fname">Dit fulde navn</label>
+    <input type="text" id="fname" name="firstname" placeholder="Dit navn...">
+
+    <label for="email">Din Email</label>
+    <input type="text" id="email" name="email" placeholder="Din Email...">
+
+    <label for="place">Vælg salon</label>
+    <select id="place" name="place">
+      <option value="bruuns">Bruuns Galleri</option>
+      <option value="bryggen">Bryggen</option>
+      <option value="fields">Fields</option>
+      <option value="kolding">Kolding Storcenter</option>
+      <option value="odense">Rosengårdcentret</option>
+      <option value="aalborg">Aalborg Storcenter</option>
+    </select>
+
+    <label for="behandling">Vælg behandling</label>
+    <select id="behandling" name="behandling">
+      <option value="akryl">Akryl</option>
+      <option value="babyboom">Babyboom/ombre</option>
+      <option value="design">Design</option>
+      <option value="gele">Gelé</option>
+      <option value="manicure">Manicure</option>
+      <option value="pedicure">Pedicure</option>
+      <option value="sololak">Sololakering</option>
+    </select>
+
+    <label for="date">Vælg dato</label>
+    <select id="date" name="date">
+      <option value="date">6/3</option>
+      <option value="date">7/3</option>
+      <option value="date">8/3</option>
+      <option value="date">9/3</option>
+      <option value="date">10/3</option>
+      <option value="date">11/3</option>
+      <option value="date">12/3</option>
+      <option value="date">13/3</option>
+      <option value="date">14/3</option>
+      <option value="date">15/3</option>
+      <option value="date">16/3</option>
+      <option value="date">17/3</option>
+      <option value="date">18/3</option>
+      <option value="date">19/3</option>
+      <option value="date">20/3</option>
+      <option value="date">21/3</option>
+      <option value="date">22/3</option>
+      <option value="date">23/3</option>
+      <option value="date">24/3</option>
+      <option value="date">25/3</option>
+      <option value="date">26/3</option>
+      <option value="date">27/3</option>
+      <option value="date">28/3</option>
+      <option value="date">29/3</option>
+      <option value="date">30/3</option>
+      <option value="date">31/3</option>
+    </select>
+
+    <label for="time">Vælg tid</label>
+    <select id="time" name="time">
+      <option value="time">10:00</option>
+      <option value="time">10:15</option>
+      <option value="time">10:30</option>
+      <option value="time">10:45</option>
+      <option value="time">11:00</option>
+      <option value="time">11:15</option>
+      <option value="time">11:30</option>
+      <option value="time">11:45</option>
+      <option value="time">12:00</option>
+      <option value="time">12:15</option>
+      <option value="time">12:30</option>
+      <option value="time">12:45</option>
+      <option value="time">13:00</option>
+      <option value="time">13:15</option>
+      <option value="time">13:30</option>
+      <option value="time">13:45</option>
+      <option value="time">14:00</option>
+      <option value="time">14:15</option>
+      <option value="time">14:30</option>
+      <option value="time">14:45</option>
+      <option value="time">15:00</option>
+      <option value="time">15:15</option>
+      <option value="time">15:30</option>
+      <option value="time">15:45</option>
+      <option value="time">16:00</option>
+      <option value="time">16:15</option>
+      <option value="time">16:30</option>
+      <option value="time">16:45</option>
+      <option value="time">17:00</option>
+      <option value="time">17:15</option>
+      <option value="time">17:30</option>
+      <option value="time">17:45</option>
+      <option value="time">18:00</option>
+      <option value="time">18:15</option>
+      <option value="time">18:30</option>
+      <option value="time">18:45</option>
+      <option value="time">19:00</option>
+    </select>
+
+    <label for="subject">Kommentar</label>
+    <textarea id="subject" name="subject" placeholder="subject"></textarea>
+
+    <input type="submit" value="BOOK TID">
+  </form>
+</div>
 
 
 
