--- a/kontakt.html
+++ b/kontakt.html
@@ -1,62 +1,68 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="contact.css">
-  </head>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="author" content="Nails Gallery Odense">
+    <meta name="description" content="Nails Gallery består af professionel neglebehandling der kan yde dig den bedste service, når det gælder pedicure og manicure behandlinger">
 
+    <title> Nails Gallery - Kontakt </title>
+    <link rel="stylesheet" href="stylesheet.css">
 
-  <header>
-     <div class="logo">
-        <img alt="Nails Gallery" title="logo" src="nails.logo.png" height="100" width="250">
-     </div>
- <nav>
-     <ul class="nav">
-             <li><a href="index.html" title="Hjem">HOME</a></li>
-             <li><a href="services.html" title="Hvilke services tilbydes">SERVICES</a></li>
-             <li><a href="onlinebooking.html" title="Book en professionel neglebehandler">ONLINE BOOKING</a></li>
-             <li><a href="kontakt.html" title="Se hvordan du kommer i dialog med vores personale og hvor du finder klinikken">CONTACT</a></li>
+</head>
 
-     </ul>
- </nav>
+<!--Header-->
+<body>
+ <header>
 
- </header>
-
-
-
-  <body>
-    <div class="contact-form">
-    <h1>CONTACT US</h1>
-    <div class="txtb">
-      <label>Full Name :</label>
-      <input type="text" name="" value="" placeholder="Enter Your Name">
+    <div class="logo">
+       <img alt="Nails Gallery" title="nail logo" src="nails.logo.png" height="100" width="250">
     </div>
+       <nav>
+    <ul class="nav">
+            <li><a href="index.html" title="knappen hjem">HOME</a></li>
+            <li><a href="services.html" title="hvilke services tilbydes">SERVICES</a></li>
+            <li><a href="onlinebooking.html" title="book en professionel neglebehandler">ONLINE BOOKING</a></li>
+            <li><a href="kontakt.html" title="Se hvordan du kommer i dialog med vores personale og hvor du finder klinikken">KONTAKT</a></li>
 
-    <div class="txtb">
-      <label>Email :</label>
-      <input type="email" name="" value="" placeholder="Enter Your Email">
-    </div>
+    </ul>
+</nav>
 
-    <div class="txtb">
-      <label>Phone Number:</label>
-      <input type="text" name="" value="" placeholder="Enter Your Phone Number">
-    </div>
+</header>
 
-    <div class="txtb">
-      <label>Message:</label>
-      <textarea></textarea>
-    </div>
-    <a class="btn">Send</a>
+	<div class="contact-form"> <!-- KN -->
+	<h1>Contact Us</h1> <!-- KN -->
+	<h4>- We will gladly help you</h4> <!-- KN -->
+		<div class="txtb"> <!-- KN -->
+			<label for="Name">Name:</label> <!-- KN -->
+			<input type="text" placeholder="Enter Your Name"> <!-- KN -->
 
-    </div>
+		</div>
 
-    <!--footer-->
-    <footer>
-   <div class="footer">
-       <p>Copyright &copy;Nails Gallery, Odense DK</p>
-       </div>
-   </footer>
+		<div class="txtb"> <!-- KN -->
+			<label for="phonenumber">Phone Number:</label> <!-- KN -->
+			<input type="text" placeholder="Enter Your Phone Number"> <!-- KN -->
 
-    </body>
-  </html>
+		</div>
+		<div class="txtb"> <!-- KN -->
+			<label for="Email">Email:</label> <!-- KN -->
+			<input type="text" placeholder="Enter Your Email"> <!-- KN -->
+
+		</div>
+		<div class="txtb"> <!-- KN -->
+			<label for="Message">Message:</label> <!-- KN -->
+			<textarea name="" id="" cols="30" rows="10" placeholder="Write your message here"></textarea> <!-- KN -->
+
+		</div>
+		<a class="btn">Send</a> <!-- KN -->
+	</div>
+
+
+	<footer>
+    <div class="footer">
+        <p>Copyright &copy;Nails Gallery, Odense DK</p>
+        </div>
+    </footer>
+
+
+</body>
+    </html>
