--- a/contact.html
+++ b/contact.html
@@ -1,62 +1,56 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="contact.css">
-  </head>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Contact</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link href="index.html" rel="stylesheet" type="text/css">
+	<link href="onlinebooking.html" rel="stylesheet" type="text/css">
+	<link href="services.html" rel="stylesheet" type="text/css">
+	
+</head>
 
-
-  <header>
-     <div class="logo">
-        <img alt="Nails Gallery" title="logo" src="nails.logo.png" height="100" width="250">
-     </div>
- <nav>
-     <ul class="nav">
-             <li><a href="index.html" title="Hjem">HOME</a></li>
-             <li><a href="services.html" title="Hvilke services tilbydes">SERVICES</a></li>
-             <li><a href="onlinebooking.html" title="Book en professionel neglebehandler">ONLINE BOOKING</a></li>
-             <li><a href="kontakt.html" title="Se hvordan du kommer i dialog med vores personale og hvor du finder klinikken">CONTACT</a></li>
-
-     </ul>
- </nav>
-
- </header>
-
-
-
-  <body>
-    <div class="contact-form">
-    <h1>CONTACT US</h1>
-    <div class="txtb">
-      <label>Full Name :</label>
-      <input type="text" name="" value="" placeholder="Enter Your Name">
-    </div>
-
-    <div class="txtb">
-      <label>Email :</label>
-      <input type="email" name="" value="" placeholder="Enter Your Email">
-    </div>
-
-    <div class="txtb">
-      <label>Phone Number:</label>
-      <input type="text" name="" value="" placeholder="Enter Your Phone Number">
-    </div>
-
-    <div class="txtb">
-      <label>Message:</label>
-      <textarea></textarea>
-    </div>
-    <a class="btn">Send</a>
-
-    </div>
-
-    <!--footer-->
-    <footer>
-   <div class="footer">
-       <p>Copyright &copy;Nails Gallery, Odense DK</p>
-       </div>
-   </footer>
-
-    </body>
-  </html>
+<body>
+	
+	
+	
+	
+	<header>
+	 <div class="main">
+	   <div class="logo">
+		<img src="nails.logo.png">
+        <ul>
+		<li class="active">
+			<a href="index.html">Home</a></li>
+		<li><a href="services.html">Services</a></li>
+		<li><a href="#">Contact</a></li>
+		<li><a href="onlinebooking.html">Online Booking</a></li>
+	   </ul>
+	  </div>	
+	 </div>
+	</header>
+	
+	<div class="title">
+	<h1>Contact</h1>
+     </div>	
+	
+<!--section-->
+	   
+	   <div id="fullpage">
+		   <section><h1>Section1</h1></section>
+		   <section><h1>Section2</h1></section>
+		   <section><h1>Section3</h1></section>
+		   <section><h1>Section4</h1></section>
+	   </div>
+	
+	
+<!--footer-->
+	   
+	<footer>
+		<div class="footer">
+			<p>Copyright &copy; 2020 Nails Gallery</p>
+		</div>
+	</footer>
+	
+</body>
+</html>
