--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Nails Gallery</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="services.html" rel="stylesheet" type="text/css">
 	<link href="contact.html" rel="stylesheet" type="text/css">
 	<link href="onlinebooking.html" rel="stylesheet" type="text/css">
@@ -21,7 +21,7 @@
 		<img src="nails.logo.png">
         <ul>
 		<li class="active">
-			<a href="#">HOME</a></li>
+			<a href="#">Home</a></li>
 		<li><a href="services.html">Services</a></li>
 		<li><a href="contact.html">Contact</a></li>
 		<li><a href="onlinebooking.html">Online Booking</a></li>
@@ -33,21 +33,67 @@
 <div class="title">
 	<h1>Nails Gallery</h1>
      </div>
-     <div class="button">
-		<a href="#" class="btn">WATCH VIDEO</a>
-		<a href="#" class="btn">LEARN MORE</a>
-	 </div>
+
  </header>
 
 
 <!--section-->
 
-	   <div id="fullpage">
-		   <section><h1>Section1</h1></section>
-		   <section><h1>Section2</h1></section>
-		   <section><h1>Section3</h1></section>
-		   <section><h1>Section4</h1></section>
-	   </div>
+<div class="about">
+	<h2>OM NAILS GALLERY</h2>
+	<div class="row">
+	<div class="column">
+	<div class="video">
+		<img src="thumbnail.jpg" title="Et billede fra vores reklamevideo" alt="Video thumbnail" width="500px">
+		<br>
+		<br>
+		<a href="https://www.youtube.com/watch?v=IrGseT1HMzM&feature=youtu.be&fbclid=IwAR1JrsZMYnlcGdPISQYakwlHVD887dDXDvnUIyX2FEFweX0YEDF5-11Et6Q"target="_blank"></a>
+	</div>
+	</div>
+	<p class="text">
+	Vi har 10 klinikker fordelt nationalt i København, Århus, Aalborg og Odense.
+	<br>
+	<br>
+	Vi tilbyder pedicure, manicure og utallige muligheder indenfor både
+	<br>
+	naturlige negle, gelénegle og shellac.
+	<br>
+	<br>
+	Vi har ikke bare fokus på at give dine negle en sand forkælelse,
+	<br>
+	men også på følelsen af velvære i hele kroppen.
+</div>
+</div>
+
+<div class="services">
+	<h2>SERVICES</h2>
+
+
+<div class="row">
+<div class="column">
+	<h3>Gelis (Gellak)</h3>
+	<img src="about-img-2.jpg" title= "Et billede af negle lakeret med Gellak" alt="Gelis/Gellak">
+	<p>GelColor er en blanding af lak og gelé. Det er en kombination af den hurtige og nemme påføringsteknik fra lak og holdbarheden fra geléen.</p>
+	<br>
+	<br>
+</div>
+<div class="column">
+	<h3>Gelénegle</h3>
+	<img src="about-img-1.jpg" title="Et billede af Gelenegle" alt="Gelenegle">
+	<p>Vores dygtige personale har stor erfaring inden for gelénegle, så du kan læne dig trygt tilbage i vores behagelige lænestole, mens vi tager os kærligt af dig.</p>
+	<br>
+</div>
+<div class="column">
+	<h3>Pedicure & manicure</h3>
+	<img src="about-img-3.jpg" title="Et billede af manicure og pedicure" alt="Pedicure & Manicure">
+	<p>Giv dine hænder eller fødder skøn pleje med en manicure eller pedicure.</p>
+	<br>
+	<br>
+	<br>
+
+</div>
+</div>
+</div>
 
 
 <!--footer-->
