--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,18 @@
 <head>
 <meta charset="utf-8">
 <title>Contact</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="index.html" rel="stylesheet" type="text/css">
 	<link href="onlinebooking.html" rel="stylesheet" type="text/css">
 	<link href="services.html" rel="stylesheet" type="text/css">
-	
+
 </head>
 
 <body>
-	
-	
-	
-	
+
+
+
+
 	<header>
 	 <div class="main">
 	   <div class="logo">
@@ -26,31 +26,49 @@
 		<li><a href="#">Contact</a></li>
 		<li><a href="onlinebooking.html">Online Booking</a></li>
 	   </ul>
-	  </div>	
+	  </div>
 	 </div>
 	</header>
-	
+
 	<div class="title">
 	<h1>Contact</h1>
-     </div>	
-	
+     </div>
+
 <!--section-->
-	   
-	   <div id="fullpage">
-		   <section><h1>Section1</h1></section>
-		   <section><h1>Section2</h1></section>
-		   <section><h1>Section3</h1></section>
-		   <section><h1>Section4</h1></section>
-	   </div>
-	
-	
+
+<div class="contact-form">
+<h1>Contact Us</h1>
+<div class="txtb">
+	<label>Full Name :</label>
+	<input type="text" name="" value="" placeholder="Enter Your Name">
+</div>
+
+<div class="txtb">
+	<label>Email :</label>
+	<input type="email" name="" value="" placeholder="Enter Your Email">
+</div>
+
+<div class="txtb">
+	<label>Phone Number:</label>
+	<input type="text" name="" value="" placeholder="Enter Your Phone Number">
+</div>
+
+<div class="txtb">
+	<label>Message:</label>
+	<textarea></textarea>
+</div>
+<a class="btn">Send</a>
+
+</div>
+
+
 <!--footer-->
-	   
+
 	<footer>
 		<div class="footer">
 			<p>Copyright &copy; 2020 Nails Gallery</p>
 		</div>
 	</footer>
-	
+
 </body>
 </html>
