--- a/index.html
+++ b/index.html
@@ -30,9 +30,17 @@
 	 </div>
 
 
+<div class="background-img">
+	<img src="background2.jpg" alt="Billede af kvinde med manicure" height="500px" >
+</div>
+
 <div class="title">
-	<h1>Nails Gallery</h1>
-     </div>
+
+</div>
+<div class="button">
+	<a href="#" class="btn-video">SE VIDEO</a>
+	<a href="#" class="btn-video">LÆS MERE</a>
+</div>
 
  </header>
 
