--- a/onlinebooking.html
+++ b/onlinebooking.html
@@ -8,7 +8,7 @@
 
 <link href="css/font-awesome.css" rel="stylesheet"> <!--link til ikonerne-->
 <link href="css/wickedpicker.css" rel="stylesheet" type='text/css' media="all" /> <!-- link til vælge et tidspunkt-->
-<link href="css/style.css" rel='stylesheet' type='text/css' /> <!-- link til css -->
+<link href="css/stylebooking.css" rel='stylesheet' type='text/css' /> <!-- link til css -->
 	
 <!--fonts--> 
 <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
@@ -110,8 +110,8 @@
 		       </header>
 	<!--kalender-->
 	
-	<div class="bgg">
-	<img src="images/banner3.jpg" alt="">
+	<div class="bgg"> 
+	
 	</div>
 			
 			
