Skift til dansk & footer virker

--- a/contact.html
+++ b/contact.html
@@ -30,31 +30,29 @@
 	 </div>
 	</header>
 
-	<div class="title">
-	<h1>Contact</h1>
-     </div>
 
-<!--section-->
+
+<!--contact section-->
 
 <div class="contact-form">
-<h1>Contact Us</h1>
+<h1>Kontakt Os</h1>
 <div class="txtb">
-	<label>Full Name :</label>
-	<input type="text" name="" value="" placeholder="Enter Your Name">
+	<label>Fulde Navn :</label>
+	<input type="text" name="" value="" placeholder="Skriv dit fulde navn">
 </div>
 
 <div class="txtb">
 	<label>Email :</label>
-	<input type="email" name="" value="" placeholder="Enter Your Email">
+	<input type="email" name="" value="" placeholder="Skriv din email">
 </div>
 
 <div class="txtb">
-	<label>Phone Number:</label>
-	<input type="text" name="" value="" placeholder="Enter Your Phone Number">
+	<label>Telefon nummer:</label>
+	<input type="text" name="" value="" placeholder="Skriv dit telefon nummer">
 </div>
 
 <div class="txtb">
-	<label>Message:</label>
+	<label>Besked:</label>
 	<textarea></textarea>
 </div>
 <a class="btn">Send</a>
