--- a/contact.html
+++ b/contact.html
@@ -38,11 +38,11 @@
 <h1>Kontakt Os</h1>
 <div class="txtb">
 	<label>Fulde Navn :</label>
-	<input type="text" name="" value="" placeholder="Skriv dit fulde navn">
+	<input type="text" name="" value="" placeholder="Skriv dit fulde navn...">
 </div>
 
 <div class="txtb">
-	<label>Email :</label>
+	<label>E-mail:</label>
 	<input type="email" name="" value="" placeholder="Skriv din email">
 </div>
 
