--- a/services.html
+++ b/services.html
@@ -3,18 +3,15 @@
 <head>
 <meta charset="utf-8">
 <title>Services</title>
-		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="index.html" rel="stylesheet" type="text/css">
 	<link href="contact.html" rel="stylesheet" type="text/css">
 	<link href="onlinebooking.html" rel="stylesheet" type="text/css">
-	
+
 </head>
 
 <body>
-	
-	
-	
-	
+
 	<header>
 	 <div class="main">
 	   <div class="logo">
@@ -26,32 +23,69 @@
 		<li><a href="contact.html">Contact</a></li>
 		<li><a href="onlinebooking.html">Online Booking</a></li>
 	   </ul>
-	  </div>	
+	  </div>
 	 </div>
-	</header>	
-	
+	</header>
+
 	<div class="title">
 	<h1>Services</h1>
-     </div>	
-	
+     </div>
+
 <!--section-->
-	   
-	   <div id="fullpage">
-		   <section><h1>Section1</h1></section>
-		   <section><h1>Section2</h1></section>
-		   <section><h1>Section3</h1></section>
-		   <section><h1>Section4</h1></section>
-	   </div>
-	
-	
-	
+
+<h1> Vi tilbyder følgende services </h1>
+<h2>Vi har tre hovedbehandlinger som vi udfører nemlig
+  <br>
+  kunstige negle, pedicure og manicure</h2>
+
+    <div class="gallery">
+  <div class="desc">Kunstige Negle</div>
+      <img src="adult-body-fashion-girl-361754.jpg" alt="" width="600" height="400">
+      <div class="desc"> Akryl m. naturlig tip - 430 kr.</div>
+      <div class="desc"> Akryl m. neglelak farver - 480 kr.</div>
+      <div class="desc"> Akryl m. glimmer - 530 kr.</div>
+      <div class="desc"> Shellac - 600 kr.</div>
+      <div class="desc">Videre til Booking</div>
+
+
+  </div>
+
+
+  <div class="gallery">
+  <div class="desc">Pedicure</div>
+      <img src="close-up-photography-of-a-woman-in-black-nail-polish-holding-851219.jpg" alt="" width="600" height="400">
+      <div class="desc"> Med neglelak - 380 kr.</div>
+      <div class="desc"> M. Fransk neglelak - 430 kr.</div>
+      <div class="desc"> Shellac - 500 kr.</div>
+      <div class="desc"> Fransk Shellac - 530 kr.</div>
+      <div class="desc">Videre til Booking</div>
+
+
+  </div>
+
+
+  <div class="gallery">
+  <div class="desc">Manicure</div>
+      <img src="three-assorted-color-nail-polish-bottles-on-surface-1328379.jpg" alt="" width="600" height="400">
+      <div class="desc"> M. neglelak - 280 kr.</div>
+      <div class="desc"> M. Fransk neglelak - 350 kr.</div>
+      <div class="desc"> Shellac - 400 kr.</div>
+      <div class="desc"> Fransk shellac - 430 kr.</div>
+      <div class="desc">Videre til Booking</div>
+  </div>
+
+<h3> Kunstige Negle </h3>
+<br>
+<p> Hos Nails Gallery finder du mange forskellige slags negle sæt. Vi har både redskaberne og tilbehøret,
+	når du skal kreere en flot 
+
 <!--footer-->
-	   
+
 	<footer>
 		<div class="footer">
 			<p>Copyright &copy; 2020 Nails Gallery</p>
 		</div>
 	</footer>
-	
+
 </body>
 </html>
