--- a/services.html
+++ b/services.html
@@ -25,59 +25,118 @@
 	   </ul>
 	  </div>
 	 </div>
+
+	 <div class="service">
+	 <h1> Vi tilbyder følgende services </h1>
+	 <h2>Vi har tre hovedbehandlinger som vi udfører nemlig
+	 	<br>
+	 	kunstige negle, pedicure og manicure</h2>
+	 </div>
+
+	 <div class="gallery">
+ <div class="desc">Kunstige Negle</div>
+		 <img src="about-img-1.jpg" alt="" width="600" height="400">
+		 <div class="desc"> Akryl m. naturlig tip - 430 kr.</div>
+		 <div class="desc"> Akryl m. neglelak farver - 480 kr.</div>
+		 <div class="desc"> Akryl m. glimmer - 530 kr.</div>
+		 <div class="desc"> Shellac - 600 kr.</div>
+
+
+ </div>
+
+
+ <div class="gallery">
+ <div class="desc">Pedicure</div>
+		 <img src="adult-body-fashion-girl-361754.jpg" alt="" width="600" height="400">
+		 <div class="desc"> Med neglelak - 380 kr.</div>
+		 <div class="desc"> M. Fransk neglelak - 430 kr.</div>
+		 <div class="desc"> Shellac - 500 kr.</div>
+		 <div class="desc"> Fransk Shellac - 530 kr.</div>
+
+
+ </div>
+
+
+ <div class="gallery">
+ <div class="desc">Manicure</div>
+		 <img src="woman-s-pink-pedicure-973405.jpg" alt="" width="600" height="400">
+		 <div class="desc"> M. neglelak - 280 kr.</div>
+		 <div class="desc"> M. Fransk neglelak - 350 kr.</div>
+		 <div class="desc"> Shellac - 400 kr.</div>
+		 <div class="desc"> Fransk shellac - 430 kr.</div>
+ </div>
+
 	</header>
 
-	<div class="title">
-	<h1>Services</h1>
-     </div>
 
 <!--section-->
 
-<h1> Vi tilbyder følgende services </h1>
-<h2>Vi har tre hovedbehandlinger som vi udfører nemlig
-  <br>
-  kunstige negle, pedicure og manicure</h2>
-
-    <div class="gallery">
-  <div class="desc">Kunstige Negle</div>
-      <img src="adult-body-fashion-girl-361754.jpg" alt="" width="600" height="400">
-      <div class="desc"> Akryl m. naturlig tip - 430 kr.</div>
-      <div class="desc"> Akryl m. neglelak farver - 480 kr.</div>
-      <div class="desc"> Akryl m. glimmer - 530 kr.</div>
-      <div class="desc"> Shellac - 600 kr.</div>
-      <div class="desc">Videre til Booking</div>
-
-
-  </div>
-
-
-  <div class="gallery">
-  <div class="desc">Pedicure</div>
-      <img src="close-up-photography-of-a-woman-in-black-nail-polish-holding-851219.jpg" alt="" width="600" height="400">
-      <div class="desc"> Med neglelak - 380 kr.</div>
-      <div class="desc"> M. Fransk neglelak - 430 kr.</div>
-      <div class="desc"> Shellac - 500 kr.</div>
-      <div class="desc"> Fransk Shellac - 530 kr.</div>
-      <div class="desc">Videre til Booking</div>
-
-
-  </div>
-
-
-  <div class="gallery">
-  <div class="desc">Manicure</div>
-      <img src="three-assorted-color-nail-polish-bottles-on-surface-1328379.jpg" alt="" width="600" height="400">
-      <div class="desc"> M. neglelak - 280 kr.</div>
-      <div class="desc"> M. Fransk neglelak - 350 kr.</div>
-      <div class="desc"> Shellac - 400 kr.</div>
-      <div class="desc"> Fransk shellac - 430 kr.</div>
-      <div class="desc">Videre til Booking</div>
-  </div>
-
+<div class="service-1">
 <h3> Kunstige Negle </h3>
+<p> Hos Nails Gallery finder du mange forskellige
+	<br>
+	slags negle sæt. Vi har både redskaberne og
+	<br>
+	tilbehøret, når du skal kreere en flot manicure
+	<br>
+	eller spændende nail-art.
+	Alle vores negle sæt er af høj
+	<br>
+	kvalitet, og de er udvalgt med omhu.
+	<br>
+	Vi prøver altid, de nye produkter vi får hjem,
+	<br>
+	så vi kan stå inde for, at produkterne er den høje kvalitet,
+	<br>
+	som vi lover.
 <br>
-<p> Hos Nails Gallery finder du mange forskellige slags negle sæt. Vi har både redskaberne og tilbehøret,
-	når du skal kreere en flot 
+<br>
+<br>
+</div>
+
+
+<div class="service-2">
+	<h3> Pedicure </h3>
+	<p> Hos Nails Gallery finder du mange forskellige
+		<br>
+		slags negle sæt. Vi har både redskaberne og
+		<br>
+		tilbehøret, når du skal kreere en flot manicure
+		<br>
+		eller spændende nail-art.
+		Alle vores negle sæt er af høj
+		<br>
+		kvalitet, og de er udvalgt med omhu.
+		<br>
+		Vi prøver altid, de nye produkter vi får hjem,
+		<br>
+		så vi kan stå inde for, at produkterne er den høje kvalitet,
+		<br>
+		som vi lover.
+		<br>
+		<br>
+		<br>
+</div>
+
+<div class="service-3">
+		<h3> Manicure </h3>
+		<p> Hos Nails Gallery finder du mange forskellige
+			<br>
+			slags negle sæt. Vi har både redskaberne og
+			<br>
+			tilbehøret, når du skal kreere en flot manicure
+			<br>
+			eller spændende nail-art.
+			Alle vores negle sæt er af høj
+			<br>
+			kvalitet, og de er udvalgt med omhu.
+			<br>
+			Vi prøver altid, de nye produkter vi får hjem,
+			<br>
+			så vi kan stå inde for, at produkterne er den høje kvalitet,
+			<br>
+			som vi lover.
+</div>
 
 <!--footer-->
 
