booking skrift farve

--- a/onlinebooking.html
+++ b/onlinebooking.html
@@ -47,7 +47,7 @@
 				
 					<div class="form-date">
 						<label><i class="fa fa-envelope" aria-hidden="true"></i> Email :</label>
-						<input type="email" name="email" placeholder="Your email" required="" />
+						<input type="text" name="email" placeholder="Din email" required="" />
 					</div>
 				
 					 <div class="form-date">
