--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 	  </div>
 	 </div>
 
+	 <slider>
+	           <slide><p>Nails Gallery</p></slide>
+	 		  <slide><p>if you break it, we can make it</p></slide>
+	 		  <slide><p>your beauty, your nails</p></slide>
+	 		  <slide><p>fake it 'till you nail it</p></slide>
+	 	</slider>
 
-<div class="title">
-
-</div>
 <div class="button">
 	<a href="#" class="btn-video">SE VIDEO</a>
 	<a href="#" class="btn-video">LÆS MERE</a>
@@ -44,7 +47,6 @@
 <!--section-->
 
 <div class="about">
-	<h2>OM NAILS GALLERY</h2>
 	<div class="row">
 	<div class="column">
 	<div class="video">
@@ -67,9 +69,6 @@
 </div>
 
 <div class="services">
-	<h2>SERVICES</h2>
-
-
 <div class="row">
 <div class="column">
 	<h3>Gelis (Gellak)</h3>
