Ændring af service

--- a/services.html
+++ b/services.html
@@ -72,32 +72,7 @@
 <!--section-->
 
 <div class="service-1">
-<h3> Kunstige Negle </h3>
-<p> Hos Nails Gallery finder du mange forskellige
-	<br>
-	slags negle sæt. Vi har både redskaberne og
-	<br>
-	tilbehøret, når du skal kreere en flot manicure
-	<br>
-	eller spændende nail-art.
-	Alle vores negle sæt er af høj
-	<br>
-	kvalitet, og de er udvalgt med omhu.
-	<br>
-	Vi prøver altid, de nye produkter vi får hjem,
-	<br>
-	så vi kan stå inde for, at produkterne er den høje kvalitet,
-	<br>
-	som vi lover.
-<br>
-<br>
-<br>
-</div>
-
-
-<div class="service-2">
-	<h3> Pedicure </h3>
-	<p> Hos Nails Gallery finder du mange forskellige
+	<p>KUNSTIGE NEGLE<img src="about-img-1.jpg" alt="adult fashion body" width="542" height="342" align="right"> <p> Hos Nails Gallery finder du mange forskellige
 		<br>
 		slags negle sæt. Vi har både redskaberne og
 		<br>
@@ -112,30 +87,59 @@
 		<br>
 		så vi kan stå inde for, at produkterne er den høje kvalitet,
 		<br>
-		som vi lover.
+		som vi lover. </p>
+<br>
+<br>
+<br>
+</div>
+
+
+<div class="service-2">
+
+	<p>PEDICURE<img src="adult-body-fashion-girl-361754.jpg" alt="adult fashion body" width="542" height="342" align="left"> <p>
+		<p> Giv dine fødder en fortjent luksus behandling.
+			<br>
+			Ofte har vi trætte og alt for belastende fødder.
+			<br>
+			Velplejde fødder føles som afspænding for kroppen.
+			<br>
+			Fødderne er den mest aktive del af
+			<br>
+			vores krop og derfor skal du
+			<br>
+			gøre det til en vane at pleje dem, så de holdes sunde, smidee og stærke.
+			<br>
+			Hos Nails Gallery laves en af byens bedste pedicure
+			<br>
+			behandlinger og du som kunde
 		<br>
 		<br>
 		<br>
 </div>
 
 <div class="service-3">
-		<h3> Manicure </h3>
-		<p> Hos Nails Gallery finder du mange forskellige
-			<br>
-			slags negle sæt. Vi har både redskaberne og
-			<br>
-			tilbehøret, når du skal kreere en flot manicure
-			<br>
-			eller spændende nail-art.
-			Alle vores negle sæt er af høj
-			<br>
-			kvalitet, og de er udvalgt med omhu.
-			<br>
-			Vi prøver altid, de nye produkter vi får hjem,
-			<br>
-			så vi kan stå inde for, at produkterne er den høje kvalitet,
-			<br>
-			som vi lover.
+	<p>MANICURE<img src="woman-s-pink-pedicure-973405.jpg" alt="adult fashion body" width="542" height="342" align="right"> <p>
+	<p> Flotte negle signalerer selvtillid og overskud.
+		<br>
+		Vores hænder er konstant udsatte og ældes
+		<br>
+		hurtigere end resten af kroppen.
+		<br>
+		Derfor skal du pleje og passe dem for at
+		<br>
+		ungå at de bliver tørre og sarte.
+		<br>
+		Det siges at en kvindes rigtige alder
+		<br>
+		afsløres kun af hendes hænder!
+<br>
+<br>
+<br>
+</div>
+
+
+
+
 </div>
 
 <!--footer-->
