--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 	  </div>
 	 </div>
 
+		
+		
+		
+<slider>
+          <slide><p>Nails Gallery</p></slide>
+		  <slide><p>if you break it, we can make it</p></slide>	
+		  <slide><p>your beauty, your nails</p></slide>
+		  <slide><p>fake it 'till you nail it</p></slide>
+	</slider>
 	 
 
 <div class="button">
