--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
 <!--section-->
 
 <div class="service-1">
-	<p>KUNSTIGE NEGLE<img src="about-img-1.jpg" alt="adult fashion body" width="542" height="342" align="right"> <p> Hos Nails Gallery finder du mange forskellige
+	<h2>KUNSTIGE NEGLE</h2><img src="about-img-1.jpg" alt="adult fashion body" width="542" height="342" align="right"> <p> Hos Nails Gallery finder du mange forskellige
 		<br>
 		slags negle sæt. Vi har både redskaberne og
 		<br>
@@ -96,7 +96,7 @@
 
 <div class="service-2">
 
-	<p>PEDICURE<img src="adult-body-fashion-girl-361754.jpg" alt="adult fashion body" width="542" height="342" align="left"> <p>
+	<h2>PEDICURE</h2><img src="adult-body-fashion-girl-361754.jpg" alt="adult fashion body" width="542" height="342" align="right"> <p>
 		<p> Giv dine fødder en fortjent luksus behandling.
 			<br>
 			Ofte har vi trætte og alt for belastende fødder.
@@ -118,7 +118,7 @@
 </div>
 
 <div class="service-3">
-	<p>MANICURE<img src="woman-s-pink-pedicure-973405.jpg" alt="adult fashion body" width="542" height="342" align="right"> <p>
+	<h2>MANICURE</h2><img src="woman-s-pink-pedicure-973405.jpg" alt="adult fashion body" width="542" height="342" align="right"> <p>
 	<p> Flotte negle signalerer selvtillid og overskud.
 		<br>
 		Vores hænder er konstant udsatte og ældes
