--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nails Gallery</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="services.html" rel="stylesheet" type="text/css">
@@ -29,16 +30,16 @@
 	  </div>
 	 </div>
 
-		
-		
-		
+
+
+
 <slider>
           <slide><p>Nails Gallery</p></slide>
-		  <slide><p>if you break it, we can make it</p></slide>	
+		  <slide><p>if you break it, we can make it</p></slide>
 		  <slide><p>your beauty, your nails</p></slide>
 		  <slide><p>fake it 'till you nail it</p></slide>
 	</slider>
-	 
+
 
 <div class="button">
 	<a href="#" class="btn-video">SE VIDEO</a>
