Video og om os siden er linket sammen med forsiden

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 
 <div class="button">
-	<a href="#" class="btn-video">SE VIDEO</a>
-	<a href="#" class="btn-video">LÆS MERE</a>
+	<a href="video.html" class="btn-video">SE VIDEO</a>
+	<a href="about.html" class="btn-video">LÆS MERE</a>
 </div>
 
  </header>
@@ -54,9 +54,6 @@
 <div class="about">
 	<div class="row">
 	<div class="column">
-	<div class="video">
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/IrGseT1HMzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</div>
 	</div>
 	<p class="text">
 	Vi har 10 klinikker fordelt nationalt i København, Århus, Aalborg og Odense.
