--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nails Gallery</title>
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="services.html" rel="stylesheet" type="text/css">
 	<link href="contact.html" rel="stylesheet" type="text/css">
 	<link href="onlinebooking.html" rel="stylesheet" type="text/css">
@@ -19,10 +19,10 @@
 	<header>
 	 <div class="main">
 	   <div class="logo">
-		<img src="images/nails.logo.png">
+		<img src="nails.logo.png">
         <ul>
 		<li class="active">
-			<a href="#">Home</a></li>
+			<a href="index.html">Home</a></li>
 		<li><a href="services.html">Services</a></li>
 		<li><a href="contact.html">Contact</a></li>
 		<li><a href="onlinebooking.html">Online Booking</a></li>
