BOOK NU knap til ny side

--- a/onlinebooking.html
+++ b/onlinebooking.html
@@ -8,7 +8,7 @@
 
 <link href="css/font-awesome.css" rel="stylesheet"> <!--link til ikonerne-->
 <link href="css/wickedpicker.css" rel="stylesheet" type='text/css' media="all" /> <!-- link til vælge et tidspunkt-->
-<link href="css/stylebooking.css" rel='stylesheet' type='text/css' /> <!-- link til css -->
+<link href="css/stylebooking.css" rel="stylesheet" type='text/css'/> <!-- link til css -->
 	
 <!--fonts--> 
 <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
@@ -85,7 +85,7 @@
 					</div>
 					<div class="clear"> </div>
 					<div class="make">
-						  <input type="submit" value="BOOK NU">
+						  <input type="submit" value="BOOK NU" formaction="succes.html">
 					</div>
 			</form>
 		</div>
