små rettelser i booking

--- a/succes.html
+++ b/succes.html
@@ -8,7 +8,7 @@
 
 <body>
 	<p class="book1">Din booking er gået igennem <span class="checkmark">&#10003;</span> </p> 
-	<p class="book2">Du modtager en mail bekrætelse inden længe!</p>
+	<p class="book2">Du modtager en mail bekræftelse inden længe!</p>
 	<span class="smiley">&#9786;</span>
 </body>
 	
