fixet time picker til 24 timers

--- a/onlinebooking.html
+++ b/onlinebooking.html
@@ -115,7 +115,12 @@
 	</div>
 			
 			
-	
+	<footer>
+		<div class="footer">
+			<p>Copyright &copy; 2020 Nails Gallery</p>
+		</div>
+	</footer>
 
 </body>
+	
 </html>
