Meta Viewport tilføjet til alle sider

--- a/booking.html
+++ b/booking.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <meta name="author" content="Nails Gallery Odense">
     <meta name="description" content="Nails Gallery består af professionel neglebehandling der kan yde dig den bedste service, når det gælder pedicure og manicure behandlinger.">
 
