--- a/succes.html
+++ b/succes.html
@@ -2,14 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>succes</title>
 	<link rel="stylesheet" href="css/stylebooking.css">
 </head>
 
 <body>
-	<p class="book1">Din booking er gået igennem <span class="checkmark">&#10003;</span> </p> 
+	<p class="book1">Din booking er gået igennem <span class="checkmark">&#10003;</span> </p>
 	<p class="book2">Du modtager en mail bekræftelse inden længe!</p>
 	<span class="smiley">&#9786;</span>
 </body>
-	
+
 </html>
