Alle sider er valideret

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 	<header>
 	 <div class="main">
 	   <div class="logo">
-		<img src="nails.logo.png">
+		<img src="nails.logo.png" alt="Nails Gallery logo">
         <ul>
 		<li class="active">
 			<a href="index.html">Home</a></li>
@@ -33,7 +33,7 @@
 	 <div class="about-us">
 	 <h1>OM NAILS GALLERY</h1>
  	</div>
-
+</header>
 	 <div class="about">
 	 	<div class="row">
 	 	<div class="column">
