--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-=======
+
 
 <title>Contact</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -22,7 +21,7 @@
 	<header>
 	 <div class="main">
 	   <div class="logo">
-		<img src="nails.logo.png">
+		<img src="nails.logo.png" alt="Nails Gallery logo">
         <ul>
 		<li class="active">
 			<a href="index.html">Home</a></li>
@@ -42,17 +41,17 @@
 <h1>Kontakt Os</h1>
 <div class="txtb">
 	<label>Fulde Navn :</label>
-	<input type="text" name="" value="" placeholder="Skriv dit fulde navn...">
+	<input type="text" name="name" value="" placeholder="Skriv dit fulde navn...">
 </div>
 
 <div class="txtb">
 	<label>E-mail:</label>
-	<input type="email" name="" value="" placeholder="Skriv din email">
+	<input type="email" name="name" value="" placeholder="Skriv din email">
 </div>
 
 <div class="txtb">
 	<label>Telefon nummer:</label>
-	<input type="text" name="" value="" placeholder="Skriv dit telefon nummer">
+	<input type="text" name="name" value="" placeholder="Skriv dit telefon nummer">
 </div>
 
 <div class="txtb">
