--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header>
 	 <div class="main">
 	   <div class="logo">
-		<img src="nails.logo.png">
+		<img src="nails.logo.png" alt="Nails Gallery logo">
         <ul>
 		<li class="active">
 			<a href="#">Home</a></li>
