--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
 	<header>
 	 <div class="main">
 	   <div class="logo">
-		<img src="nails.logo.png">
+		<img src="nails.logo.png" alt="Nails Gallery logo">
         <ul>
 		<li class="active">
 			<a href="index.html">Home</a></li>
@@ -141,7 +141,7 @@
 
 
 
-</div>
+
 
 <!--footer-->
 
