--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@
 	<header>
 	 <div class="main">
 	   <div class="logo">
-		<img src="nails.logo.png">
+		<img src="nails.logo.png" alt="Nails Gallery logo">
         <ul>
 		<li class="active">
 			<a href="index.html">Home</a></li>
@@ -33,6 +33,7 @@
 	 <div class="our-video">
 	 <h1>NAILS GALLERY VIDEO</h1>
  	</div>
+</header>
 
 	<div align="center">
 	 <iframe width="560" height="315" src="https://www.youtube.com/embed/IrGseT1HMzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
