--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 	<header>
 	 <div class="main">
 	   <div class="logo">
-		<img src="nails.logo.png" alt="Nails Gallery logo">
+		<img src="Nails.logo.png" alt="Nails Gallery logo">
         <ul>
 		<li class="active">
 			<a href="index.html">Home</a></li>
