--- a/onlinebooking.html
+++ b/onlinebooking.html
@@ -22,7 +22,7 @@
 
 	<div class="main">
 	   <div class="logo">
-		<img src="nails.logo.png" alt="Nails Gallery logo">
+		<img src="Nails.logo.png" alt="Nails Gallery logo">
         <ul>
 		<li class="active">
 			<a href="index.html">Home</a></li>
