--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="row">
 <div class="column">
 	<h3>Gelis (Gellak)</h3>
-	<img src="about-img-2.jpg" title= "Et billede af negle lakeret med Gellak" alt="Gelis/Gellak">
+	<img src="carr-03.jpg" title= "Et billede af negle lakeret med Gellak" alt="Gelis/Gellak">
 	<p>GelColor er en blanding af lak og gelé. Det er en kombination af den hurtige og nemme påføringsteknik fra lak og holdbarheden fra geléen.</p>
 	<br>
 	<br>
@@ -100,11 +100,10 @@
 
 <!--footer-->
 
-	<footer>
-		<div class="footer">
-			<p>Copyright &copy; 2020 Nails Gallery</p>
-		</div>
-	</footer>
+		<footer>
+			<p>Author: Mateus pinto <br><br>
+			<a href="mailto:hege@example.com">hege@example.com</a></p>
+		</footer>
 
 </body>
 </html>
